<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Free/Busy</string>
    <string name="action_settings">Settings</string>
    <string name="Intro">Welcome to the Free/Busy Checker App.</string>
    <string name="Intro2">This app checks times based on the calendars you choose to see if you are free or busy.</string>
    <string name="author">Author :: Steven Quella</string>
    <string name="version">Version :: 1.0</string>
    <string name="Continue">Continue</string>
    
    <string name="title_activity_query_calendars">Choose Calendars</string>
    <string name="Instructions1">Select the calendars you wish to search through.</string>
    <string name="Info1">The checked boxes are set to visible on your calendar app.</string>
    <string name="select_all">Select All</string>
    <string name="chooseRange">Select Date/Time to Query</string>
    <string name="choose_start">Start:</string>
    <string name="choose_end">End:</string>
    <string name="next_dialog">Next</string>
    <string name="done">OK</string>
    
    <string name="title_activity_query_results">Results</string>
	<string name="events_found">Events Found: </string>
	<string name="event_count"> 0</string>
	<string name="query_again">Query Again</string>
    
</resources>
